--- a/CCIP/CCIP/ScheduleTableViewCell.xib
+++ b/CCIP/CCIP/ScheduleTableViewCell.xib
@@ -9,18 +9,23 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="fontawesome-webfont.ttf">
+            <string>FontAwesome</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ScheduleCell" id="l9Y-7J-4kA" customClass="ScheduleTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ScheduleCell" id="l9Y-7J-4kA" customClass="ScheduleTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="420" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l9Y-7J-4kA" id="U81-Gg-HeJ">
-                <rect key="frame" x="0.0" y="0.0" width="387" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="420" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TdY-Ng-p1O">
-                        <rect key="frame" x="20" y="8" width="339" height="35"/>
+                        <rect key="frame" x="20" y="8" width="372" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="8Ty-3Y-mqM"/>
                         </constraints>
@@ -47,9 +52,19 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q7p-MF-tNF">
+                        <rect key="frame" x="372" y="23" width="40" height="32"/>
+                        <fontDescription key="fontDescription" name="FontAwesome" family="FontAwesome" pointSize="20"/>
+                        <state key="normal" title=""/>
+                        <connections>
+                            <action selector="favoriteAction:" destination="l9Y-7J-4kA" eventType="touchUpInside" id="8hH-5P-eBT"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="q7p-MF-tNF" secondAttribute="trailing" id="4Ha-SQ-Y0T"/>
                     <constraint firstItem="R4H-1T-Ebg" firstAttribute="leading" secondItem="U81-Gg-HeJ" secondAttribute="leading" constant="20" id="NJJ-P0-CRQ"/>
+                    <constraint firstItem="q7p-MF-tNF" firstAttribute="centerY" secondItem="U81-Gg-HeJ" secondAttribute="centerY" id="Teq-NY-e09"/>
                     <constraint firstItem="wce-ZU-hQC" firstAttribute="leading" secondItem="R4H-1T-Ebg" secondAttribute="trailing" constant="10" id="bpQ-b5-wGD"/>
                     <constraint firstAttribute="bottomMargin" secondItem="R4H-1T-Ebg" secondAttribute="bottom" id="diP-1r-XdF"/>
                     <constraint firstItem="wce-ZU-hQC" firstAttribute="centerY" secondItem="R4H-1T-Ebg" secondAttribute="centerY" id="oX5-0b-aNR"/>
@@ -59,6 +74,7 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="FavoriteButton" destination="q7p-MF-tNF" id="bvA-Ax-kaH"/>
                 <outlet property="LabelLabel" destination="wce-ZU-hQC" id="lzM-XO-SP2"/>
                 <outlet property="RoomLocationLabel" destination="R4H-1T-Ebg" id="KnH-OH-VV9"/>
                 <outlet property="ScheduleTitleLabel" destination="TdY-Ng-p1O" id="l13-yn-zKL"/>
